fix: Adjusts positions and z-indexes

--- a/src/app/rundown/components/part/part.component.scss
+++ b/src/app/rundown/components/part/part.component.scss
@@ -22,11 +22,13 @@
   }
 
   &::before {
+    top: 22px;
+    left: 0;
     content: ' ';
-    z-index: 1000000000;
+    z-index: 100;
     position: absolute;
     border-style: solid;
-    border-width: 4px 0 4px 8px;
+    border-width: 4px 0 6px 8px;
     border-color: transparent transparent transparent #a5a5a5;
   }
 }
