--- a/src/app/rundown/components/timeline-next-cursor/timeline-next-cursor.component.scss
+++ b/src/app/rundown/components/timeline-next-cursor/timeline-next-cursor.component.scss
@@ -2,6 +2,8 @@
   position: absolute;
   top: 10px;
   bottom: 0;
+  z-index: 200;
+  margin-left: -2px;
 }
 
 .c-timeline-next-cursor {
