--- a/src/app/rundown/components/timeline-playhead/timeline-playhead.component.scss
+++ b/src/app/rundown/components/timeline-playhead/timeline-playhead.component.scss
@@ -1,4 +1,5 @@
 :host {
+  z-index: 300;
   position: absolute;
   top: 10px;
   bottom: 0;
